# keel-and-deck

./: .gitignore  .houston-design.md  .houston-v2-design.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SKILL.md  SYNC_PROTOCOL.md  cli-deps.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  twitter-banner.html
app/houston-tauri/: Cargo.toml  README.md
app/houston-tauri/src/: agent.rs  agent_commands.rs  agent_files.rs  agent_store.rs  conversations.rs  lib.rs  self_improvement.rs  tray.rs
app/houston-tauri/src/agent_store/: activity.rs  helpers.rs  routines.rs
app/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: agent.rs  auth.rs  bug_report.rs  engine_supervisor.rs  houston_prompt.rs  lib.rs  logging.rs  main.rs  panic_hook.rs  routine_runner.rs  workspace.rs
app/src-tauri/src/bug_report/: format.rs  linear.rs  linear_graphql.rs  linear_tests.rs  mod.rs
app/src-tauri/src/commands/: agent.rs  agent_configs.rs  agents.rs  attachments.rs  chat.rs  clipboard.rs  experiences.rs  memory.rs  mod.rs  os.rs  preferences.rs  provider.rs  sessions.rs  skills.rs  slack.rs  store.rs  system.rs  workspaces.rs  worktree.rs
app/src-tauri/src/houston_prompt/: dispatcher.rs  integrations.rs  mod.rs
crates/houston-channels/: Cargo.toml
crates/houston-channels/src/: channel.rs  lib.rs  registry.rs  types.rs
crates/houston-channels/src/slack/: api.rs  mod.rs  oauth.rs  socket_mode.rs  types.rs
crates/houston-channels/src/telegram/: mod.rs  polling.rs  types.rs
crates/houston-cli/: Cargo.toml
crates/houston-cli/skills/: SKILL.md
crates/houston-cli/src/: activity_ops.rs  main.rs  routine.rs  routine_ops.rs  schema.rs  task.rs
crates/houston-file-watcher/: Cargo.toml
crates/houston-sessions/: Cargo.toml  README.md
crates/houston-sessions/src/: claude_path.rs  codex_parser.rs  concurrency.rs  lib.rs  manager.rs  parser.rs  session_io.rs  session_pump.rs
crates/houston-skills/: Cargo.toml
crates/houston-skills/src/: format.rs  index.rs  lib.rs  patch.rs  remote.rs  validate.rs
crates/keel-db/: Cargo.toml
crates/keel-db/src/: db.rs  issue_types.rs  lib.rs  migrations.rs  models.rs  repo_issue_deps.rs  repo_issue_feed.rs  repo_issues.rs  repo_issues_update.rs  repo_projects.rs  repo_session_events.rs  repo_sessions.rs
crates/keel-sessions/: Cargo.toml
crates/keel-sessions/src/: claude_path.rs  lib.rs  manager.rs  parser.rs  session_io.rs  session_pump.rs  types.rs
crates/keel-tauri/: Cargo.toml
crates/keel-tauri/src/: agent_sessions.rs  channel_manager.rs  events.rs  lib.rs  paths.rs  session_queue.rs  session_runner.rs  state.rs  supervisor.rs  workspace.rs  workspace_commands.rs
create-app/template/src-tauri/: Cargo.toml  Cargo.toml.template  tauri.conf.json
create-app/template/src-tauri/src/: commands.rs  lib.rs  main.rs  memory_commands.rs  skill_commands.rs  workspace.rs
engine/houston-agents-conversations/: Cargo.toml
engine/houston-agents-conversations/src/: lib.rs  session_id_tracker.rs  session_runner.rs  supervisor.rs
engine/houston-antigravity-installer/: Cargo.toml
engine/houston-antigravity-installer/src/: lib.rs
engine/houston-cli-bundle/: Cargo.toml
engine/houston-cli-bundle/src/: lib.rs
engine/houston-composio/: Cargo.toml
engine/houston-composio/src/: apps.rs  auth.rs  cli.rs  commands.rs  connection_watcher.rs  install.rs  lib.rs  lifecycle.rs  mcp.rs
engine/houston-composio/src/recommender/: generate_custom.rs  llm_pick.rs  mod.rs  provider_cli.rs
engine/houston-db/: Cargo.toml
engine/houston-db/src/: db.rs  lib.rs  migrations.rs  repo_chat_feed.rs  repo_engine_tokens.rs  repo_phone_access.rs  repo_search.rs
engine/houston-engine-core/: Cargo.toml  README.md
engine/houston-engine-core/src/: agent_configs.rs  agents_crud.rs  attachments.rs  conversations.rs  error.rs  file_mutex.rs  git_bash.rs  lib.rs  paths.rs  preferences.rs  provider.rs  reaper.rs  runtime_pids.rs  skills.rs  state.rs  store.rs  workspace_context.rs  workspaces.rs  worktree.rs
engine/houston-engine-core/src/agents/: activity.rs  config.rs  files.rs  learnings_context.rs  lease.rs  lifecycle.rs  mod.rs  prompt.rs  routine_run_status.rs  routine_runs.rs  routines.rs  self_improvement.rs  status.rs  store.rs  types.rs
engine/houston-engine-core/src/attachments/: mod.rs  storage.rs  store.rs  tests.rs  types.rs
engine/houston-engine-core/src/orchestration/: activity_projection.rs  adjust.rs  context.rs  create.rs  graph.rs  mod.rs  parent_summary.rs  prompts.rs  role_profile.rs  save.rs  scheduler.rs  store.rs  types.rs
engine/houston-engine-core/src/provider/: antigravity_login.rs  mod.rs  resolve.rs
engine/houston-engine-core/src/routines/: engine_dispatcher.rs  mod.rs  runner.rs  runs.rs  scheduler.rs  types.rs
engine/houston-engine-core/src/sessions/: control.rs  file_changes.rs  generate_instructions.rs  history.rs  mod.rs  provider.rs  provider_oneshot.rs  summarize.rs  summary_text.rs  workdir_locks.rs
engine/houston-engine-core/src/store/: bundled.rs
engine/houston-engine-core/src/workspaces/: io.rs  migrate.rs  mod.rs
engine/houston-sync/: Cargo.toml
engine/houston-sync/src/: client.rs  protocol.rs
engine/houston-tauri/: Cargo.toml  README.md
engine/houston-tauri/src/: self_improvement.rs  state.rs
engine/houston-tauri/src/agent_store/: config.rs  conversations.rs  mod.rs  routine_runs.rs  types.rs
engine/houston-terminal-manager/: Cargo.toml  README.md
engine/houston-terminal-manager/src/: agy_install_path.rs  agy_runner.rs  claude_install_path.rs  claude_path.rs  claude_runner.rs  cli_process.rs  codex_command.rs  codex_parser.rs  lib.rs  manager.rs  native_delegation.rs  parser.rs  provider_auth.rs  provider_error.rs  session_dispatch.rs  session_io.rs  session_pump.rs  session_update.rs  stderr_filter.rs  types.rs
engine/houston-terminal-manager/src/provider/: antigravity.rs  (+2 more)
engine/houston-ui-events/: Cargo.toml
engine/houston-ui-events/src/: lib.rs
(+1683 files in other folders)
