[workspace]
resolver = "2"
members = [
    "crates/houston-sessions",
    "crates/houston-db",
    "crates/houston-tauri",
    "crates/houston-events",
    "crates/houston-scheduler",
    "crates/houston-channels",
    "crates/houston-memory",
    "crates/houston-skills",
    "app/src-tauri",
]
exclude = [
    "create-app/template",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
houston-sessions = { version = "0.3.2", path = "crates/houston-sessions" }
houston-db = { version = "0.3.2", path = "crates/houston-db" }
houston-tauri = { version = "0.3.2", path = "crates/houston-tauri" }
houston-events = { version = "0.3.2", path = "crates/houston-events" }
houston-scheduler = { version = "0.3.2", path = "crates/houston-scheduler" }
houston-channels = { version = "0.3.2", path = "crates/houston-channels" }
houston-memory = { version = "0.3.2", path = "crates/houston-memory" }
houston-skills = { version = "0.3.2", path = "crates/houston-skills" }
