[package]
name = "houston-app"
version = "0.3.2"
edition = "2021"

[lib]
name = "houston_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
houston-tauri = { path = "../../crates/houston-tauri" }
houston-skills = { path = "../../crates/houston-skills", features = ["remote"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-sentry = "0.5"
sentry = "0.42"
open = "5"
houston-sync = { path = "../../crates/houston-sync" }
houston-agent-files = { path = "../../crates/houston-agent-files" }
houston-ui-events = { path = "../../crates/houston-ui-events" }
houston-agents-conversations = { path = "../../crates/houston-agents-conversations" }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
base64 = "0.22"
