[package]
name = "houston-channels"
version = "0.3.0"
edition = "2021"
description = "Channel adapters (Slack, Telegram) for AI agent desktop apps"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
