[package]
name = "houston-sessions"
version = "0.3.0"
edition = "2021"
description = "Claude/Codex CLI process management for AI agent desktop apps"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
