[package]
name = "houston-skills"
version = "0.1.0"
edition = "2021"
description = "Hermes-style self-improving skills for AI agents"
license = "MIT"

[features]
default = []
remote = ["reqwest"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
