[package]
name = "keel-db"
version = "0.1.0"
edition = "2021"
description = "SQLite database layer for AI agent desktop apps"
license = "MIT"
repository = "https://github.com/ja-818/keel-and-deck"

[dependencies]
libsql = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
