[package]
name = "keel-sessions"
version = "0.1.0"
edition = "2021"
description = "Claude/Codex CLI process management for AI agent desktop apps"
license = "MIT"
repository = "https://github.com/ja-818/keel-and-deck"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
