[package]
name = "keel-tauri"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin wrapping keel-sessions and keel-db for AI agent desktop apps"
license = "MIT"
repository = "https://github.com/ja-818/keel-and-deck"

[dependencies]
keel-sessions = { workspace = true }
keel-db = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2", features = [] }
