[package]
name = "keel-tauri"
version = "0.3.1"
edition = "2021"
description = "Tauri plugin wrapping keel-sessions and keel-db for AI agent desktop apps"
license = "MIT"
repository = "https://github.com/ja-818/keel-and-deck"

[dependencies]
keel-sessions = { workspace = true }
keel-db = { workspace = true }
keel-events = { workspace = true }
keel-scheduler = { workspace = true }
keel-channels = { workspace = true }
keel-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
libsql = "0.6"
base64 = "0.22"
