[package]
name = "houston-agents-conversations"
version = "0.3.2"
edition = "2021"
description = "Orchestrates multi-session conversation lifecycle for Houston agents — spawn, monitor, persist, supervise"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tauri = { version = "2", features = [] }
houston-terminal-manager = { workspace = true }
houston-db = { workspace = true }
houston-ui-events = { version = "0.3.2", path = "../houston-ui-events" }
