[package]
name = "houston-db"
version = "0.4.1"
edition = "2021"
description = "SQLite database layer for AI agent desktop apps"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
libsql = "0.6"
chrono = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
