[package]
name = "houston-engine-core"
version = "0.4.0"
edition = "2021"
description = "Runtime container for Houston Engine — owns DB, event sinks, paths, and domain logic shared by HTTP routes and CLI tools"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = "1"
houston-db = { workspace = true }
houston-ui-events = { workspace = true }
houston-agent-files = { workspace = true }
houston-engine-protocol = { workspace = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
dirs = "5"
async-trait = { workspace = true }
cron = "0.12"

[dev-dependencies]
tempfile = "3"
