[package]
name = "houston-sync"
version = "0.3.3"
edition = "2021"
description = "WebSocket sync protocol for Houston desktop-mobile relay"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
rand = "0.8"
hex = "0.4"
url = "2"
chrono = { workspace = true }
