[package]
name = "houston-tauri"
version = "0.3.2"
edition = "2021"
description = "Tauri plugin wrapping houston-terminal-manager and houston-db for AI agent desktop apps"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
houston-terminal-manager = { workspace = true }
houston-db = { workspace = true }
houston-events = { workspace = true }
houston-scheduler = { workspace = true }
houston-sync = { workspace = true }
houston-agent-files = { workspace = true }
houston-ui-events = { workspace = true }
houston-agents-conversations = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tauri = { version = "2", features = ["tray-icon"] }
uuid = { workspace = true }
chrono = { workspace = true }
libsql = "0.6"
base64 = "0.22"
tracing = { workspace = true }
