[package]
name = "houston-terminal-manager"
version = "0.3.2"
edition = "2021"
description = "Terminal/CLI subprocess manager for Claude, Codex, and other CLI-based AI agents"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
