[package]
name = "houston-terminal-manager"
version = "0.4.1"
edition = "2021"
description = "Terminal/CLI subprocess manager for Claude, Codex, and other CLI-based AI agents"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# Cross-platform home-directory resolution (HOME on Unix, USERPROFILE on
# Windows). Used by `claude_path` to expand `~/...` entries in the common
# install-dir list.
dirs = "5"
