[package]
name = "houston-ui-events"
version = "0.3.2"
edition = "2021"
description = "Event types emitted from Houston backend to the UI via Tauri's event bus"
license = "MIT"
repository = "https://github.com/ja-818/houston"

[dependencies]
serde = { workspace = true }
houston-terminal-manager = { workspace = true }
